# aider

./: MANIFEST.in  README.md  cli.py  pyproject.toml
aider/: __init__.py  dump.py  io.py  models.py  repomap.py  utils.py
repomap_tool/: MANIFEST.in  __init__.py  _backend.py  git_repo.py  io.py  models.py  pyproject.toml  repomap.py  service.py  spinner.py  utils.py
repomap_tool/mcp/: __init__.py  server.py
samples/: repomap_self_full.txt  repomap_self_readme.txt
scripts/: generate_samples.py
tests/basic/: language_samples.py  test_mcp_server.py  test_repomap.py  test_repomap_tool.py
